[BUGFIX] Fixed spacing of headings in detail view

--- a/Resources/Private/Scss/germania-sacra.scss
+++ b/Resources/Private/Scss/germania-sacra.scss
@@ -84,7 +84,7 @@ $formLabelWidth: 150px;
 			margin-bottom: 1em;
 			> * {
 				line-height: 1.5;
-				margin: 0 0 0 15px;
+				margin: 0 0 0 15px!important;
 				padding: 0;
 			}
 
